content-container add some css

--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,13 @@
 <div class="content">
   <div class="container">
     <div class="text-container">
-      THE HAM IS WORDPRESS THEME <br>
-      WE ARE CREATIVE <br>
-      Just Buy And Enjoy These Awesome Features
+      <h2 class="text-name-h2">THE HAM IS <span class="main-color-text">WORDPRESS THEME</span></h2>
+      <h1 class="text-name-h1">WE ARE CREATIVE</h1>
+      <h3 class="text-name-h3">Just Buy And Enjoy These Awesome Features</h3>
     </div>
     <div class="button-container">
-      <button class="btn">1ST</button>
-      <button class="btn">2ND</button>
+      <button class="btn btn-left">EXPLORE NOW</button>
+      <button class="btn btn-right">PURCHASE NOW</button>
     </div>
   </div>
 </div>
