add 3rd block, need add some css for text

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 </header>
 
 <div class="content">
-  <div class="container">
+  <div class="container-body">
     <div class="text-container">
       <h2 class="text-name-h2">THE HAM IS <span class="main-color-text">WORDPRESS THEME</span></h2>
       <h1 class="text-name-h1">WE ARE CREATIVE</h1>
@@ -59,6 +59,27 @@
       <button class="btn btn-right">PURCHASE NOW</button>
     </div>
   </div>
+</div>
+
+<div class="container-4-block">
+
+  <div class="block-dark col-3">
+    <img src="img/Forma_1.png" class="img-center">
+    <div class="text-inside-dark">DIFFERENT THEME OPTION</div>
+  </div>
+  <div class="block-light col-3">
+    <img src="img/Forma_2.png" class="img-center">
+    <div class="text-inside">FULLY CUSTOMIZE</div>
+  </div>
+  <div class="block-dark col-3">
+    <img src="img/Forma_3.png" class="img-center">
+    <div class="text-inside-dark">UNLIMITED SUPPORT</div>
+  </div>
+  <div class="block-light col-3">
+    <img src="img/Forma_4.png" class="img-center">
+    <div class="text-inside">RESPONSIVE ALL DEVICE</div>
+  </div>
+
 </div>
 
 
