--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,54 @@
 
 </div>
 
+<div class="amazing-features">
+  <h2>Creative Amazing Features</h2>
+
+  <div class="Rtable Rtable--3cols">
+
+    <div class="Rtable-cell">
+      <h2>Retina Ready</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>Creative Blog Style</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>Icon Fonts</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+
+    <div class="Rtable-cell">
+      <h2>Parallax Effects</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>Amazing Interface</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>SEO Optimized</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+
+    <div class="Rtable-cell">
+      <h2>Creative Solutions</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>Mega Menus</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h2>Custom Backgrounds</h2>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+
+  </div>
+
+</div>
+
 
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
