--- a/src/index.html
+++ b/src/index.html
@@ -88,41 +88,41 @@
   <div class="Rtable Rtable--3cols">
 
     <div class="Rtable-cell">
-      <h2>Retina Ready</h2>
+      <h3 class="font-size-text-amazing">Retina Ready</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
     <div class="Rtable-cell">
-      <h2>Creative Blog Style</h2>
+      <h3 class="font-size-text-amazing">Creative Blog Style</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
     <div class="Rtable-cell">
-      <h2>Icon Fonts</h2>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-
-    <div class="Rtable-cell">
-      <h2>Parallax Effects</h2>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h2>Amazing Interface</h2>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h2>SEO Optimized</h2>
+      <h3 class="font-size-text-amazing">Icon Fonts</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
 
     <div class="Rtable-cell">
-      <h2>Creative Solutions</h2>
+      <h3 class="font-size-text-amazing">Parallax Effects</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
     <div class="Rtable-cell">
-      <h2>Mega Menus</h2>
+      <h3 class="font-size-text-amazing">Amazing Interface</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
     <div class="Rtable-cell">
-      <h2>Custom Backgrounds</h2>
+      <h3 class="font-size-text-amazing">SEO Optimized</h3>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+
+    <div class="Rtable-cell">
+      <h3 class="font-size-text-amazing">Creative Solutions</h3>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h3 class="font-size-text-amazing">Mega Menus</h3>
+      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+    </div>
+    <div class="Rtable-cell">
+      <h3 class="font-size-text-amazing">Custom Backgrounds</h3>
       All our modules are built with the possi bility to thse <br> choose between different design and you change.
     </div>
 
