block 4 need css

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
   <div class="block-dark col-3">
     <img src="img/Forma_1.png" class="img-center">
-    <div class="text-inside-dark">DIFFERENT THEME OPTION</div>
+    <div class="text-inside text-inside-dark">DIFFERENT THEME OPTION</div>
   </div>
   <div class="block-light col-3">
     <img src="img/Forma_2.png" class="img-center">
@@ -73,7 +73,7 @@
   </div>
   <div class="block-dark col-3">
     <img src="img/Forma_3.png" class="img-center">
-    <div class="text-inside-dark">UNLIMITED SUPPORT</div>
+    <div class="text-inside text-inside-dark">UNLIMITED SUPPORT</div>
   </div>
   <div class="block-light col-3">
     <img src="img/Forma_4.png" class="img-center">
@@ -82,51 +82,51 @@
 
 </div>
 
-<div class="amazing-features">
+<div class="amazing-features container">
+
   <h2>Creative Amazing Features</h2>
 
-  <div class="Rtable Rtable--3cols">
+    <div class="row">
 
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Retina Ready</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Creative Blog Style</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Icon Fonts</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Retina Ready</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Creative Blog Style</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Icon Fonts</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
 
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Parallax Effects</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Amazing Interface</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">SEO Optimized</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Parallax Effects</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Amazing Interface</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">SEO Optimized</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
 
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Creative Solutions</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Creative Solutions</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Mega Menus</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
+      <div class="col-sm-4 features-block">
+        <h3 class="font-size-text-amazing">Custom Backgrounds</h3>
+        All our modules are built with the possi bility to thse choose between different design and you change.
+      </div>
     </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Mega Menus</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-    <div class="Rtable-cell">
-      <h3 class="font-size-text-amazing">Custom Backgrounds</h3>
-      All our modules are built with the possi bility to thse <br> choose between different design and you change.
-    </div>
-
-  </div>
 
 </div>
 
