--- a/src/index.html
+++ b/src/index.html
@@ -84,49 +84,77 @@
 
 <div class="amazing-features container">
 
-  <h2>Creative Amazing Features</h2>
+  <h2 class="amazing-block-name">Creative Amazing Features</h2>
+  <hr class="hr-line hr-underline" align="center" width="77" size="2" color="#18cfab" />
+  <hr class="hr-line hr-space-bottom" align="center" width="77" size="2" color="#18cfab" />
+  <div class="row">
 
-    <div class="row">
-
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Retina Ready</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Creative Blog Style</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Icon Fonts</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Parallax Effects</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Amazing Interface</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">SEO Optimized</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Creative Solutions</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Mega Menus</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
-      <div class="col-sm-4 features-block">
-        <h3 class="font-size-text-amazing">Custom Backgrounds</h3>
-        All our modules are built with the possi bility to thse choose between different design and you change.
-      </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/1.png" class="amazing-img-item">
+        Retina Ready
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
     </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/2.png" class="amazing-img-item">
+        Creative Blog Style
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/3.png" class="amazing-img-item">
+        Icon Fonts
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/4.png" class="amazing-img-item">
+        Parallax Effects
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/5.png" class="amazing-img-item">
+        Amazing Interface
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/6.png" class="amazing-img-item">
+        SEO Optimized
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/7.png" class="amazing-img-item">
+        Creative Solutions
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/8.png" class="amazing-img-item">
+        Mega Menus
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+    <div class="col-sm-4 features-block">
+      <h3 class="font-size-text-amazing">
+        <img src="img/9.png" class="amazing-img-item">
+        Custom Backgrounds
+      </h3>
+      All our modules are built with the possi bility to thse choose between different design and you change.
+    </div>
+  </div>
 
 </div>
 
