block about started

--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,8 @@
 <div class="amazing-features container">
 
   <h2 class="amazing-block-name">Creative Amazing Features</h2>
-  <hr class="hr-line hr-underline" align="center" width="77" size="2" color="#18cfab" />
-  <hr class="hr-line hr-space-bottom" align="center" width="77" size="2" color="#18cfab" />
+  <hr class="hr-line hr-underline" align="center" width="77" size="2" color="#18cfab"/>
+  <hr class="hr-line hr-space-bottom" align="center" width="77" size="2" color="#18cfab"/>
   <div class="row">
 
     <div class="col-sm-4 features-block">
@@ -155,6 +155,20 @@
       All our modules are built with the possi bility to thse choose between different design and you change.
     </div>
   </div>
+
+</div>
+
+<div class="about">
+  <div class="block-about col-sm-6">
+
+  </div>
+
+  <div class="block-about col-sm-6">
+    <h2 class="about-block-name">About Our Company</h2>
+    <hr class="hr-line hr-underline about-hr" align="center" width="77" size="2" color="#18cfab"/>
+    <hr class="hr-line hr-space-bottom about-hr" align="center" width="77" size="2" color="#18cfab"/>
+  </div>
+
 
 </div>
 
