--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
     <hr class="hr-line hr-space-bottom about-hr" align="center" width="77" size="2" color="#18cfab"/>
 
 
-    <ul class="nav nav-pills nav-pills-block" role="tablist">
+    <ul class="nav nav-pills-block" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" data-toggle="pill" href="#history">OUR HISTORY</a>
       </li>
